fix: home page alignment

--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -35,7 +35,7 @@
 
 // testimonials section
 .testimonials_ {
-  @apply container mx-auto mb-20 px-5  pt-14 lg:mb-40 2xl:pt-20;
+  @apply bz-container;
   & h3 {
     @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
   }
@@ -73,22 +73,27 @@
 // collaborate section
 
 .collaborate_ {
-  @apply bg-[url(/_next/static/media/collaborate-img.5818b821.png)] bg-cover bg-no-repeat lg:mx-auto lg:bg-none;
+  @apply mt-20 bg-[url(/_next/static/media/collaborate-img.5818b821.png)] bg-cover bg-no-repeat lg:mx-auto lg:bg-none;
   & h3 {
     @apply text-3xl font-semibold text-black md:text-4xl  lg:text-5xl 2xl:text-6xl;
   }
   &_bgwrapper {
-    @apply bg-slate-900 bg-opacity-80 px-5 pt-14 pb-40 lg:bg-inherit 2xl:pt-20;
+    @apply bg-slate-900 bg-opacity-80 pt-14 pb-40 lg:bg-inherit 2xl:pt-20;
   }
   &_content {
     @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-20 2xl:pt-16;
+    &_wrapper {
+      @apply bz-container;
+    }
+
     &_text {
       @apply w-full lg:w-2/3;
 
       & p {
-        @apply pt-8 text-lg text-gray-300 lg:text-3xl lg:text-slate-800;
+        line-height: 150% !important;
+        @apply pt-8 text-lg   text-gray-300 lg:text-xl lg:text-slate-800 2xl:text-3xl;
       }
-      & .talk-btn {
+      .talk-btn {
         @apply mt-8 rounded-full border-2 border-purple-700 bg-purple-700 px-7 py-2 text-lg text-white lg:bg-transparent lg:text-2xl lg:text-purple-700;
       }
     }
@@ -109,7 +114,7 @@
 // service card section
 
 .servicecard_ {
-  @apply container mx-auto;
+  @apply bz-container;
   & h3 {
     @apply text-3xl font-semibold md:text-5xl 2xl:text-6xl;
   }
@@ -137,45 +142,10 @@
   }
 }
 
-// our team section
-
-.ourteam_ {
-  @apply container mx-auto;
-  & h3 {
-    @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
-  }
-  &_bgwrapper {
-    @apply relative px-5 pt-16 pb-40 md:pb-60 lg:pb-80 xl:pb-96 2xl:pt-20;
-  }
-  &_content {
-    @apply flex w-full flex-row justify-center gap-10 space-x-4 overflow-x-visible pt-12  lg:pt-16;
-    &_card {
-      @apply relative h-[400px] w-72 flex-shrink-0 rounded-tl-[2rem] rounded-tr-[2rem] rounded-br-[2rem] bg-cover bg-no-repeat;
-      &_text {
-        @apply absolute bottom-0 top-auto flex w-72 flex-col items-start justify-start rounded-br-[2rem] bg-opacity-95 bg-gradient-to-t from-black to-transparent pl-3 pb-3 pt-32;
-        & .name {
-          @apply text-base  text-white lg:text-xl;
-        }
-        & .title {
-          @apply text-xs text-white lg:text-sm;
-        }
-      }
-    }
-  }
-  &_bigtxt {
-    @apply absolute top-[500px] bottom-auto -z-10 flex w-full justify-center md:top-[400px];
-    & div {
-      @apply flex flex-row justify-center whitespace-nowrap text-9xl text-[25vw] opacity-50 md:text-[35vh] lg:text-[40vh] xl:text-[48vh] 2xl:text-[55vh];
-      -webkit-text-fill-color: transparent;
-      -webkit-text-stroke-width: 3px;
-      -webkit-text-stroke-color: black;
-    }
-  }
-}
-
+// partners section
 .partners {
   &_container {
-    @apply container mx-auto mt-20  px-5 2xl:mt-52;
+    @apply bz-container;
 
     & h3 {
       @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
